# text-book-AI-Humanoid-Rebotics-claude

./: .gitignore  README.md
.claude/agents/: code-example-generator.md  content-personalizer.md  content-writer.md  urdu-translator.md
.github/agents/: copilot-instructions.md
backend/: .coverage  .env.example  README.md  auth_utils.py  cookie_config.py  db.py  index_content.py  main.py  migrate.py  pyproject.toml  rag_service.py  railway.json  requirements.txt
backend/docs/intro/: index.md
backend/docs/module1-ros2/: 01-architecture.md  02-nodes-topics-services.md  03-python-packages.md  04-launch-files.md  05-urdf.md
backend/docs/module2-simulation/: _category_.json  chapter1-gazebo-basics.md  chapter4-unity-ml-agents.md
backend/docs/module3-isaac/: chapter1-isaac-sim-intro.md  chapter2-isaac-gym.md  chapter4-isaac-reinforcement-learning.md
backend/docs/module4-vla/: chapter1-vla-intro.md  chapter2-multimodal-models.md  chapter3-action-chunking.md
backend/migrations/: 001_create_auth_tables.sql
backend/routes/: auth.py  personalize.py  translate.py
backend/services/: agent_config.py  cache_service.py  chat_history_service.py  personalization_service.py  translation_service.py
backend/tests/: test_auth_api.py  test_auth_cache.py  test_auth_service.py  test_cache_service.py  test_chat_history.py  test_cookie_config.py  test_docs_available.py  test_migrate.py  test_personalization_service.py  test_personalize_api.py  test_translate_api.py  test_translation_service.py
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
(+198 files in other folders)
